@@ -11,6 +11,9 @@ Major changes between version 2.0 and 2.0.1
     netmask.
 
   CHANGES FROM DIALD 1.0 BRANCH
+  - Use getprotoent() and getservent() to read protocol and service
+    name <-> number mappings rather than home grown parsing. This
+    finally notes the aliases as well.
   - Fixed installation of PAM module.
   - Get the correct clocks per second value for the return from
     times() using sysconf(), CLK_TCK or HZ.
